# snake-rl

./: .gitignore  PYTHON_TRAINING.md  README.md  custom_train_config.json  custom_train_config.schema.json  estimate_training_time.py  eval_pytorch.py  game.js  gui.py  index.html  pyproject.toml  requirements.txt  serve_model_inference.py  serve_training_monitor.py  train.md  train_config.py  train_pytorch.py  train_with_config.py
docs/: browser-agent-api.md  custom-train-config.html  custom-train-config.md  js-rule-mapping.md  python-training.md
runs_smoke/: parallel_benchmark_report.md
runs_smoke/curriculum_replay_migration/: train_config.json
runs_smoke/curriculum_replay_migration/checkpoints/: best.pt  latest.pt
runs_smoke/curriculum_replay_migration/logs/: summary.json
runs_smoke/scheme1_smoke/: train_config.json
runs_smoke/scheme3_smoke/: train_config.json
runs_smoke/scheme4_smoke/: train_config.json
snake_rl/: JS_RULE_MAPPING.md  __init__.py  agent.py  cli.py  config.py  env.py  estimate_time.py  evaluate.py  form_field_tips.py  gui_app.py  inference_server.py  model.py  monitor_server.py  parallel_rollout.py  process_supervisor.py  replay_buffer.py  run_context.py  run_meta.py  schemes.py  train.py  train_config_json.py  training_state.py  versions.py  viz.py  web_server.py
tests/: test_agent_hybrid_schema.py  test_cli_smoke.py  test_env_and_history.py  test_replay_and_config.py  test_run_context.py
web/: app.html  dashboard.css  dashboard.html  dashboard.js  game.js  index.html  style.css  train_preview.html  train_preview.js
(+10 files in other folders)
