[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snake_rl"]

[project]
name = "snake-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "torch>=2.11.0",
    "ttkbootstrap>=1.20.2",
]

[project.scripts]
snake-rl = "snake_rl.cli:main"
snake-gui = "snake_rl.gui_app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
