[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snake_rl"]

[project]
name = "snake-rl"
version = "0.1.0"
description = "Snake RL workspace with browser game, Double DQN training, and a FastAPI web console."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "tensorboard>=2.18",
    "torch>=2.11.0",
    "uvicorn>=0.29",
]

[project.scripts]
snake-rl = "snake_rl.cli:main"
snake-webui = "snake_rl.web_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
